style.css
body {
  background-image: url(./img/pattern.jpg);
  background-attachment: scroll;
  background-attachment: fixed;
  background-position: center;
  height: 100vh;
  font-family: "Open Sans", sans-serif;
  margin: 0;
}
/*START SPINNER*/
/* Absolute Center Spinner */
.loading {
  position: fixed;
  z-index: 999;
  height: 2em;
  width: 2em;
  overflow: show;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  visibility: hidden;
}

/* Transparent Overlay */
.loading:before {
  content: '';
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.3);
}

.loading:not(:required) { 
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.loading:not(:required):after {
  content: '';
  display: block;
  font-size: 10px;
  width: 1em;
  height: 1em;
  margin-top: -0.5em;
  -webkit-animation: spinner 1500ms infinite linear;
  -moz-animation: spinner 1500ms infinite linear;
  -ms-animation: spinner 1500ms infinite linear;
  -o-animation: spinner 1500ms infinite linear;
  animation: spinner 1500ms infinite linear;
  border-radius: 0.5em;
  -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
  box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
}

/* Animation */
.loader {
  border: 16px solid #f3f3f3; /* Light grey */
  border-top: 16px solid rgb(206, 10, 30); 
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
  position: absolute;
  top: 50%;
  left: 50%;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

/*END SPINNER*/

.h2-popup {
  font-size: 40px;
}

img.pokemon-mobile-close {
  display: none;
}

img.pokemon-mobile-image {
  display: block;
  width: 90px;
  height: auto;
}

.desktop-hide {
  display: none;
}
.logo-wrapper {
  display: flex;
  position: relative;
  align-items: baseline;
  justify-content: center;
}

nav {
  background-color: #434343;
  width: 100%;
  padding: 30px 0px;
}

.nav-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}
.main {
  max-width: 1400px;
  margin: auto;
}

.logo {
  width: 70px;
}

h3 {
  margin: -1px;
  padding: 20px 0px;
}
.image-close:after {
  content: url("./images/back.svg");
  cursor: pointer;
  width: 30px;
  color: #fff;
  position: absolute;
  z-index: 3;
  top: 20px;
  left: 30px;
}
.tab-btns {
  display: flex;
}

progress#progressBar:before {
  display: inline;
  content: "" attr(value);
  font-family: "Open Sans", sans-serif;
  position: absolute;
  top: 9px;
  left: 9px;
}

progress#progressBar {
  height: 40px;
  width: 100%;
  display: flex;
  position: relative;
  align-items: center;
  flex-direction: column;
}
.stats {
  width: 90%;
  text-align: left;
}
.tab-active {
  background-color: #121212;
  color: #f2f2f2;
}

.popupflex {
  display: flex;
  justify-content: flex-start;
  gap: 20px;
  flex-direction: column;
}

progress {
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.progress-bar {
  display: flex;
  flex-direction: column;
}
.d-none {
  display: none;
}

.ability {
  width: 50%;
  color: #333;
  border-radius: 12px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(195 195 195);
}

.pokemon-popup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  border-radius: 12px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  z-index: 1000;
  min-width: 500px;
  background-color: rgba(248, 247, 216, 1);

  animation: fadeIn 1s;
  -webkit-animation: fadeIn 0.5s;
  -moz-animation: fadeIn 0.5s;
  -o-animation: fadeIn 0.5s;
  -ms-animation: fadeIn 0.5s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.pokemon-popup::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url(./img/bg-popup.jpg);
  background-size: cover;
  background-position: center;
  opacity: 0.5;
  z-index: -1;
  border-radius: 12px;
}

.pokemon-tab-info {
  background-color: #121212;
  color: #f2f2f2;
  top: 0;
  border-bottom-left-radius: 12px;
  border-bottom-right-radius: 12px;
  margin-top: -1;
  padding: 5%;
  min-height: 445px;
}
.height-weight-wrapper {
  display: flex;
  gap: 10%;
}

input {
  height: 40px;
  font-family: "Roboto", sans-serif;
  border: 0px solid transparent;
  padding: 10px;
  font-size: 16px;
}

button {
  height: 40px;
  background-color: #afc3d1;
  width: auto;
  font-size: 16px;
  font-family: "Roboto", sans-serif;
  border: 0px solid transparent;
}
#search-wrapper {
  display: flex;
  border: 1px solid rgba(0, 0, 0, 0.276);
  align-items: stretch;
  border-radius: 50px;
  background-color: #fff;
  overflow: hidden;
  max-width: 300px;
  box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, 0.273);
}
#search {
  border: none;
  width: 350px;
  font-size: 15px;
}
#search:focus {
  outline: none;
}
.search-icon {
  margin: 10px;
  color: rgba(0, 0, 0, 0.564);
}
#search-button {
  border: none;
  cursor: pointer;
  color: #fff;
  background-color: #2c3801;
  padding: 0px 10px;
}
.popup-image {
  max-width: 100%;
  height: auto;
}

.popup-open {
  overflow: hidden;
}
.single-bg-card {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.581);
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  cursor: pointer;
}

h1 {
  text-align: center;
  margin-top: 20px;
  color: #fff;
  font-size: 50px;
  margin-bottom: 10px;
}

.parent button {
  display: inline-block;
  vertical-align: middle;
}
.types-container {
  width: 100%;
  display: flex;
}
.types-popup-wrapper {
  justify-content: flex-start;
  align-items: center;
  text-align: center;
}
.types-desc-wrapper {
  justify-content: center;
  gap: 40px;
  align-items: center;
  text-align: center;
}
.types {
  width: 50%;
  border-radius: 12px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pokemon-image-little {
  position: absolute;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  right: -15px;
  top: -30px;
  max-height: 90px;
  max-width: 100px;
  background: white;
  border-radius: 50%;
  padding: 12px;
}

.pokemon-image-little img {
  width: 90px;
  height: auto;
}
.pokemon-image {
  width: 100%;
  height: 250px;
  object-fit: contain;
}

.pokemon-single-card {
  position: relative;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
  max-width: 300px;
  background-color: #f4f4f4;
  border-radius: 12px;
  padding: 30px;
  margin: 30px;
  cursor: pointer;
  transition: transform 0.2s;
}

.pokemon-single-card:hover {
  transform: scale(1.06);
}
.container-popup-fixed {
  position: fixed;
  width: -webkit-fill-available;
}


.pokemon-cards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 50px;
}

.info-container {
  background-color: #fff;
  border-top-left-radius: 40px;
  border-top-right-radius: 40px;
  min-height: 100px;
  margin-top: -40px;
}

.btn-primary-popup {
  position: absolute;
  right: 10px;
  cursor: pointer;
}
.btn-primary {
  cursor: pointer;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  width: 50%;
}

.bgYellow {
  background-color: rgba(255, 255, 0, 0.5);
}
.bgRed {
  background-color: rgba(255, 0, 0, 0.61);
}
.bgBlue {
  background-color: rgba(0, 0, 255, 0.7);
}
.bgGreen {
  background-color: rgba(0, 128, 0, 0.7);
}
.bgPurple {
  background-color: rgba(128, 0, 128, 0.5);
}
.bgGray {
  background-color: rgba(128, 128, 128, 0.5);
}
.bgOrange {
  background-color: rgba(255, 166, 0, 0.5);
}
.bgLiteGray {
  background-color: rgba(211, 211, 211, 0.5);
}
.bgLiteRed {
  background-color: rgba(255, 0, 0, 0.4);
}
.bgLiteGreen {
  background-color: rgba(0, 128, 0, 0.5);
}
.bgLitePurple {
  background-color: #a890f0;
}

@media (max-width: 800px) {
  .pokemon-image-little {
    top: -50px;
  }
  h3 {
    text-align: center;
  }
  .pokemon-popup {
    padding-top: 0px;
    min-width: 240px;
  }
  .pokemon-single-card {
    margin-top: 70px;
  }
  .types-container {
    flex-direction: column;
    justify-self: flex-start;
    gap: 20px;
  }
  .h2-popup {
    font-size: 30px;
    margin-top: -10px;
  }
  .pokemon-tab-info {
    height: auto;
  }

  .pokemon-image-popup {
    display: none;
  }

  .pokemon-image-little {
    max-width: 55px;
    top: -12px;
  }

  .pokemon-image-little img {
    display: none;
  }
  img.pokemon-mobile-close {
    display: block;
  }

  .pokemon-image-little img {
    width: 40px;
    height: auto;
  }

  .desktop-hide {
    display: block;
  }

}

